# py-insider

./: README.md  pyproject.toml
src/py_insider/: main.py  parts.py  types_.py  utils.py
src/py_insider_rss/: main.py  parts.py  types_.py  utils.py
