[project]
name = "py-insider"
description = "Read python insider blog inside your terminal."
version = "1.0.0"
authors = [
  {name = "Muhammad Altaaf", email = "taafuuu@gmail.com"}
]
classifiers = [
  "Private :: Do not upload"
]
dependencies = [
  "feedparser",
  "markdownify",
  "rich",
]


[project.scripts]
py-insider = "py_insider.main:main"
